--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query": "^5.87.1",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-paginate": "^8.3.0",
-    "use-debounce": "^10.0.5",
+    "use-debounce": "^10.0.6",
     "yup": "^1.7.0"
   },
   "devDependencies": {
